Diseño boostrap parte 1

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=a4a9590304696b718870",
-    "/css/app.css": "/css/app.css?id=96f1fae309ca18a75143"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
