--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     },
     "devDependencies": {
         "axios": "^0.21.1",
-        "bootstrap": "^4.1.0",
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
@@ -31,6 +30,8 @@
         "yargs-parser": "^20.2.5"
     },
     "dependencies": {
+        "boostrap": "^2.0.0",
+        "bootstrap": "^4.3.1",
         "object-path": "^0.11.5"
     }
 }
